// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserCommentsPage /> handles invalid user 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={10}
    mdOffset={1}
  >
    <div
      className="UserComments"
    >
      <Redirect
        push={false}
        to="/"
      />
      <CommentsList
        comments={Map {}}
        onDeleteComment={[Function]}
      />
    </div>
  </Col>
</Row>
`;

exports[`<UserCommentsPage /> renders all user comments when scrolled 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={10}
    mdOffset={1}
  >
    <div
      className="UserComments"
    >
      <PageHeader
        bsClass="page-header"
      >
        Comments 
        <small>
          (
          3
           
          Comments
          )
        </small>
      </PageHeader>
      <CommentsList
        comments={
          Map {
            1 => Object {
              "artist": "ABC",
              "body": "First comment",
              "created_at": "<time datetime=\\"2018-05-09T04:05:00Z\\" data-local=\\"time-ago\\">May  9, 2018  4:05am</time>",
              "for": "Album",
              "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
              "id": 1,
              "name": "ABC",
              "path": "artist/abc/album/abc",
              "user_name": "joe",
              "user_slug": "joe",
            },
            2 => Object {
              "artist": "DEF",
              "body": "Second comment",
              "created_at": "<time datetime=\\"2018-05-05T05:34:56Z\\" data-local=\\"time-ago\\">May  5, 2018  5:34am</time>",
              "for": "Album",
              "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
              "id": 2,
              "name": "DEF",
              "path": "artist/def/album/def",
              "user_name": "joe",
              "user_slug": "joe",
            },
            3 => Object {
              "artist": "XYZ",
              "body": "Third comment",
              "created_at": "<time datetime=\\"2018-05-02T08:15:00Z\\" data-local=\\"time-ago\\">May  2, 2018  8:15am</time>",
              "for": "Album",
              "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
              "id": 3,
              "name": "XYZ",
              "path": "artist/xyz/album/xyz",
              "user_name": "joe",
              "user_slug": "joe",
            },
          }
        }
        onDeleteComment={[Function]}
      />
    </div>
  </Col>
</Row>
`;

exports[`<UserCommentsPage /> renders user comments page 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={10}
    mdOffset={1}
  >
    <div
      className="UserComments"
    >
      <PageHeader
        bsClass="page-header"
      >
        Comments 
        <small>
          (
          3
           
          Comments
          )
        </small>
      </PageHeader>
      <CommentsList
        comments={
          Map {
            1 => Object {
              "artist": "ABC",
              "body": "First comment",
              "created_at": "<time datetime=\\"2018-05-09T04:05:00Z\\" data-local=\\"time-ago\\">May  9, 2018  4:05am</time>",
              "for": "Album",
              "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
              "id": 1,
              "name": "ABC",
              "path": "artist/abc/album/abc",
              "user_name": "joe",
              "user_slug": "joe",
            },
            2 => Object {
              "artist": "DEF",
              "body": "Second comment",
              "created_at": "<time datetime=\\"2018-05-05T05:34:56Z\\" data-local=\\"time-ago\\">May  5, 2018  5:34am</time>",
              "for": "Album",
              "gravatar_url": "https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon",
              "id": 2,
              "name": "DEF",
              "path": "artist/def/album/def",
              "user_name": "joe",
              "user_slug": "joe",
            },
          }
        }
        onDeleteComment={[Function]}
      />
    </div>
  </Col>
</Row>
`;
